# ocaml_act

./: .gitignore  .ocamlformat  README.md  README.md.backup  act.opam  act_ir.opam  dune-project
examples/: README.md  colatz.ml  dune  lukas_example.ml  recursive_buffer.ml  simple_buffer.ml
lib/: act.ml  dune  ochp.ml
lib/act/: CBool.ml.bak  CBool.mli.bak  CInt.ml.bak  CInt.mli.bak  Expr_tag.ml  a0.ml.bak  a0.mli.bak  act (copy).mli.bak  act.ml  act.mli  act_graph.ml.bak  act_graph.mli.bak  any.ml  any.mli  assem.ml  assem.mli  c_enum.ml  c_enum.mli  cbool.ml  cbool.mli  cbool0.ml  cbool0.mli  chan.ml  chan.mli  chp.ml  chp.mli  chp_node.ml  chp_node.mli  chp_sim.ml.bak  chp_sim.mli.bak  cint.ml  cint.mli  cint0.ml  cint0.mli  code_pos.ml  code_pos.mli  compiler.ml  compiler.mli  dtype.ml  dtype.mli  (+41 more)
lib/act_ir/: act_ir.ml  dune
lib/act_utils/: act_utils (copy).ml.bak  act_utils.ml  act_utils.ml.bak  dune
lib/compiler/: cint_value_lattice.ml  cint_value_lattice.mli  compiler.ml  compiler.mli  dflow_ir.ml  dflow_ir.mli  dune  expr.ml  expr.mli  f_expr.mli  fblock.ml  fblock.mli  flat_chp.ml  flat_chp.mli  flat_dflow.ml  flat_dflow.mli  flat_mem.ml  flat_mem.mli  interproc_chan.ml  nonempty_list.ml  opt_program.ml  opt_program.mli  program.ml  program.mli  stf.ml  stf.mli
lib/exporter/: chp_exporter.ml  chp_exporter.mli  cint_value_lattice.ml  dflow.ml  dflow.mli  dflow_exporter.ml  dflow_exporter.mli  dflow_ir.ml  dune  exporter.ml  (+20 more)
test/: cpu.ml  dflow_compile_test.ml  dflow_tests.ml  dune  export_test.ml  ir_test.ml  lukas_test.ml  t3.ml  t3.mli  test.act
(+126 files in other folders)
